--- a/client/e-commerce/src/app/globals.css
+++ b/client/e-commerce/src/app/globals.css
@@ -1,8 +1,9 @@
 @import "tailwindcss";
+@import "normalize.css";
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #333;
 }
 
 @theme inline {
@@ -22,5 +23,8 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
